--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body>
     <div id="app" class="--app">
       <header>
-        <div id="dashboard">
+        <div id="dashboard" class="--dashboard flex flex-align-center white-text text-shadow-black">
           <div id="time-container">
-            <p id="time-data">08:18 PM</p>
+            <p id="time-data"></p>
           </div>
           <div id="weather-container">
             
           </div>
-          <div id="auth-container">
-            <img id='auth-img' src="" alt="">
-            <p id="auth-data">Sign In</p>
+          <div id="auth-container" class="--auth-container flex">
+            <img id='auth-img' class="icon" src="./src/images/FilePerson.png" alt="sign in person">
+            <p id="auth-data" class="--auth-data">Sign In</p>
           </div>
         </div>
       </header>
