--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
         </nav>
       </header>
+      <main>
+        <section id="skills-container" class="--skills-container">
+          <ul id="filtered-skills-list" class="--filtered-skills-list flex flex-wrap flex-center">
+
+          </ul>
+        </section>
+        <!-- <section>
+          <button id="temp-add" class="--temp-add">Temp Add</button>
+        </section> -->
+      </main>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
