--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
 
           </ul>
         </section>
+        <section id="info-container" class="--info-container">
+            <h1 id="info-title" class='--info-title'>SKLZ</h1>
+            <img id="info-icon" class="--info-icon" src="./src/images/reactjs.svg" alt="react">
+            <h1 id="info-skill-name" class="--info-skill-name">REACT</h1>
+            <h2>Time Spent</h2>
+            <p>04M28D</p>
+            <h2>Popularity</h2>
+            <p>41%</p>
+            <p>devs use</p>
+            <h2>Version</h2>
+            <p>18.2.0</p>
+            <p>Stable</p>
+            <h2># of Projects</h2>
+            <p>17</p>
+            <p>In Production</p>
+        </section>
         <!-- <section>
           <button id="temp-add" class="--temp-add">Temp Add</button>
         </section> -->
