--- a/index.html
+++ b/index.html
@@ -33,21 +33,25 @@
 
           </ul>
         </section>
-        <section id="info-container" class="--info-container">
-            <h1 id="info-title" class='--info-title'>SKLZ</h1>
-            <img id="info-icon" class="--info-icon" src="./src/images/reactjs.svg" alt="react">
-            <h1 id="info-skill-name" class="--info-skill-name">REACT</h1>
-            <h2>Time Spent</h2>
-            <p>04M28D</p>
-            <h2>Popularity</h2>
-            <p>41%</p>
-            <p>devs use</p>
-            <h2>Version</h2>
-            <p>18.2.0</p>
-            <p>Stable</p>
-            <h2># of Projects</h2>
-            <p>17</p>
-            <p>In Production</p>
+        <section id="info-container" class="--info-container secondary-font XXPT bold">
+            <h1 id="info-title" class='--info-title XXXIIPT  thick-stroke'>SKLZ</h1>
+            <div class='--info-grid-b'>
+              <img id="info-icon" class="--info-icon" src="./src/images/reactjs.svg" alt="react">
+              <h1 id="info-skill-name" class="--info-skill-name XXXIIPT  thick-stroke">REACT</h1>
+            </div>
+            
+            <h2 class="time grid-center-item">Time Spent</h2>
+            <p class="count grid-center-item">04M28D</p>
+            <h2 class="pop grid-center-item">Popularity</h2>
+            <p class="percentage grid-center-item">41%</p>
+            <p class="use grid-center-item">devs use</p>
+            <h2 class="version grid-center-item">Version</h2>
+            <p class="iteration grid-center-item">18.2.0</p>
+            <p class="status grid-center-item">Stable</p>
+            <h2 class="projects grid-center-item"># of Projects</h2>
+            <p class="number grid-center-item">17</p>
+            <p class="production grid-center-item">In Production</p>
+            <button class="--info-caret grid-center-item">caret</button>
         </section>
         <!-- <section>
           <button id="temp-add" class="--temp-add">Temp Add</button>
