--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </section>
         <section id="info-container" class="--info-container secondary-font XXPT bold">
-            <h1 id="info-title" class='--info-title XXXIIPT  thick-stroke'>SKLZ</h1>
+            <!-- <h1 id="info-title" class='--info-title XXXIIPT thick-stroke'>SKLZ</h1>
             <div class='--info-grid-b'>
               <img id="info-icon" class="--info-icon" src="./src/images/reactjs.svg" alt="react">
               <h1 id="info-skill-name" class="--info-skill-name XXXIIPT  thick-stroke">REACT</h1>
@@ -51,7 +51,7 @@
             <h2 class="projects grid-center-item"># of Projects</h2>
             <p class="number grid-center-item">17</p>
             <p class="production grid-center-item">In Production</p>
-            <button class="--info-caret grid-center-item">caret</button>
+            <button class="--info-caret grid-center-item">caret</button> -->
         </section>
         <!-- <section>
           <button id="temp-add" class="--temp-add">Temp Add</button>
