--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
           </div>
           <div id="auth-container" class="--auth-container flex">
-            <a href="">
+            <a id="auth-link" href="">
               <img id='auth-img' class="icon" src="./src/images/FilePerson.png" alt="sign in person">
               <span id="auth-data" class="--auth-data secondary-font XXPT">Sign In</span>
             </a>       
