--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <!-- <section>
           <button id="temp-add" class="--temp-add">Temp Add</button>
         </section> -->
+        <div id="test-div">
+
+        </div>
       </main>
     </div>
     <script type="module" src="/main.js"></script>
