--- a/index.html
+++ b/index.html
@@ -34,33 +34,39 @@
           </ul>
         </section>
         <section id="info-container" class="--info-container secondary-font XXPT bold">
-            <!-- <h1 id="info-title" class='--info-title XXXIIPT thick-stroke'>SKLZ</h1>
-            <div class='--info-grid-b'>
-              <img id="info-icon" class="--info-icon" src="./src/images/reactjs.svg" alt="react">
-              <h1 id="info-skill-name" class="--info-skill-name XXXIIPT  thick-stroke">REACT</h1>
-            </div>
-            
-            <h2 class="time grid-center-item">Time Spent</h2>
-            <p class="count grid-center-item">04M28D</p>
-            <h2 class="pop grid-center-item">Popularity</h2>
-            <p class="percentage grid-center-item">41%</p>
-            <p class="use grid-center-item">devs use</p>
-            <h2 class="version grid-center-item">Version</h2>
-            <p class="iteration grid-center-item">18.2.0</p>
-            <p class="status grid-center-item">Stable</p>
-            <h2 class="projects grid-center-item"># of Projects</h2>
-            <p class="number grid-center-item">17</p>
-            <p class="production grid-center-item">In Production</p>
-            <button class="--info-caret grid-center-item">caret</button> -->
         </section>
-        <!-- <section>
-          <button id="temp-add" class="--temp-add">Temp Add</button>
-        </section> -->
-        <div id="test-div">
-
-        </div>
+        <section id="project-container" class="--project-container secondary-font XXPT bold">
+          <div id="project-div" class="--project-div">
+            <h1 class="--project-title thin-stroke">CHECK OUT SOME PROJECTS I'VE DONE IN REACT</h1>
+            <div id="project-name-card" class="--project-card flex flex-wrap">
+              <div id="project-image-div" class="--project-image-div">
+                <img id="project-image" class="--project-image" src="./src/images/placeholder.jpg" alt="placeholder">
+              </div>
+              <div id="project-data" class="--project-data-div">
+                <div class="progress">
+                  <div class="progress-bar bg-warning" role="progressbar" style="width:52.2%" aria-valuenow="52.2" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-royal" role="progressbar" style="width: 39.7%" aria-valuenow="39.7" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-danger" role="progressbar" style="width: 8.1%" aria-valuenow="8.1" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <ul id="progress-data" class="--progress-data flex flex-wrap">
+                  <li class="--lang-1 black-text XXPT bold">JavaScript <span class="--lang-percentage XVIPT">52.2%</span></li>
+                  <li class="--lang-2 black-text XXPT bold">CSS <span class="--lang-percentage XVIPT">39.7%</span></li>
+                  <li class="--lang-3 black-text XXPT bold">HTML5 <span class="--lang-percentage XVIPT">8.0%</span></li>
+                </ul>
+                <h2 class="XXXIIPT thin-stroke">Project Title</h2>
+                <div id="github-div" class="--github-div flex">
+                  <p class="thin-stroke">May 28, 2023</p>
+                  <a id='github-link' class='--github-link' href="#">
+                    <img id='code-fork' class='--code-fork' src="src/images/code-fork-solid.png" alt="repo link">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
